# workrepo

./: pyproject.toml
notebooks/: Working with poetry.ipynb
